# esp_weather

./: README.md
.github/workflows/: app.yml
esp_remote_app/: .gitattributes  .gitignore  flutter_jank_metrics_01.json  justfile  pubspec.yaml
esp_remote_app/android/: .project  build.gradle  settings.gradle
esp_remote_app/android/app/: .project  build.gradle
esp_remote_app/android/app/src/debug/: AndroidManifest.xml
esp_remote_app/android/app/src/main/: AndroidManifest.xml
esp_remote_app/android/app/src/main/java/com/example/esp_remote/: MainActivity.java
esp_remote_app/android/app/src/main/java/com/example/flutter_rust_bridge_template/: MainActivity.java
esp_remote_app/android/jni-utils/: .project
esp_remote_app/lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
esp_remote_app/native/: Cargo.toml
esp_remote_app/native/src/: api.rs  ble.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  logger.rs
esp_remote_app/native/src/ble/: error.rs  handler.rs
esp_remote_app/native/src/control/: command.rs
esp_remote_common/: Cargo.toml
esp_remote_common/src/: lib.rs  state.rs
esp_remote_firmware/: Cargo.toml  sdkconfig.defaults
esp_remote_firmware/src/: ble.rs  hardware.rs  main.rs  state.rs  temp_display.rs
esp_remote_firmware/src/hardware/: i2c.rs
esp_remote_firmware/src/tasks/: blink_led.rs  mod.rs  read_sensors.rs
esp_remote_firmware_no_std/: Cargo.toml
esp_remote_firmware_no_std/.cargo/: config.toml
esp_remote_firmware_no_std/src/: ble.rs  hardware.rs  main.rs
esp_remote_firmware_no_std/src/tasks/: blink_led.rs  mod.rs  temp_display.rs
esp_weather_app/: .gitignore  pubspec.yaml
esp_weather_app/android/app/src/main/: AndroidManifest.xml
esp_weather_app/android/app/src/main/java/com/example/esp_remote/: MainActivity.java
esp_weather_app/android/app/src/profile/: AndroidManifest.xml
esp_weather_app/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
esp_weather_app/native/: Cargo.toml
esp_weather_app/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
esp_weather_common/: Cargo.toml
esp_weather_common/src/: lib.rs  state.rs
esp_weather_firmware/: Cargo.toml  sdkconfig.defaults
esp_weather_firmware/.cargo/: config.toml
esp_weather_firmware/src/: ble.rs  hardware.rs  main.rs
esp_weather_firmware/src/hardware/: display.rs  i2c.rs
esp_weather_firmware/src/tasks/: display.rs  mod.rs  read_sensors.rs
esp_weather_pcb/: .gitignore  esp_weather_pcb.kicad_pcb  esp_weather_pcb.kicad_prl  esp_weather_pcb.kicad_pro  esp_weather_pcb.kicad_sch
