[package]
name = "esp_remote_firmware"
version = "0.1.0"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = 3

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "hal", "esp-idf-sys/native", "embassy"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
esp32-nimble = { version= "0.1.4" }
esp_remote_common = {path = "../esp_remote_common"}
anyhow = "1.0.71"
embassy-time = { version = "0.1", features = ["tick-hz-1_000_000"] }
sh1106 = "0.4.0"
embedded-graphics = "0.7.1"
thiserror = "1.0.43"
embedded-hal = "0.2.7"
lazy_static = "1.4.0"
dht-hal-drv = "0.2.2"

[build-dependencies]
embuild = "0.31.2"
