[package]
name = "esp_weather_common"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { git="https://github.com/bincode-org/bincode.git", default-features = false , features=["derive","alloc"]}
const-default = { version = "1.0.0", features = ["derive"], default-features = false }
paste = "1.0.13"
spin = "0.9.8"
uuid = { version = "1.3.3", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

