[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
btleplug = "0.10.5"
flutter_rust_bridge = "1"
futures = "0.3.28"
jni = "0.19.0"
jni-utils = "0.1.0"
once_cell = "1.17.2"
thiserror = "1.0.40"
tokio = {version = "1.28.2", features=["macros","rt","rt-multi-thread"]}
esp_remote_common = {path = "../../esp_remote_common"}
uuid = "1.3.3"
